13Mar01=======================================================================
1. implemented first cut at non blocking connect
2. removed memory leakage in connects
3. add link IP address if available on who
4. made the \r\n work correctly on External connections
5. removed client.pl
6. fixed memory leakages in DXMsg
7. fixed pc39/21 handling
8. fixed routing table issues and general disconnection tidy up
10Mar01=======================================================================
1. minor changes to the admin manual to reflect differences in distibutions
thanks to pa3ezl (g0vgs)
2. add (finally) the first draft of the usermanual (g0vgs)
05Mar01=======================================================================
1. do some major surgery on the connect logic to shorten the possibility of 
duplicate connects happening
2. fix stupid error on sh/qrz queries that don't work
04Mar01=======================================================================
1. allow fallback to english for help
03Mar01=======================================================================
1. allow incoming and outgoing IP connects direct to cluster.pl
2. fixed (long standing)a hole in PC17 handling
3. added winclient.pl (actually just a very basic client) from Iain G0RDI
4. Added Spanish as a language (thanks ea1dav) (g0vgs) 
5. ignore BUST(ED) spots
28Feb01=======================================================================
1. allow sh/c gb7 (ie show the config of all gb7 nodes)(for example)
2. get rid of spurious DXHash 'uninitialised' messages if no corresponding 
file is present.
3. changed policy of $censorpc in DXProt.pm so that badwords are looked for
in all text announces etc.
4. Unpad (remove excess spaces from) spotted callsigns in PC11. 
5. test for opertaing system in various places and do different if M$
27Feb01=======================================================================
1. allow partial node callsigns on sh/c (eg sh/c gb7)